feat: auth middleware wip
